Fixed the spacing between scene3 and scene4

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   left: 0;
   right: 0;
   width: 100%;
-  background: transparent;
+  background: #e5e6e7;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -750,16 +750,16 @@ body.bg-active {
 
 /* Grey Circles Section */
 .grey-circles-section {
-  height: 300px;
+  height: 0px;
   background: #e5e6e7;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  padding-bottom: 80px;
+  padding-bottom: 20px;
   padding-top: 0px;
-  margin-bottom: 20px;
-  margin-top: clamp(80px, 12vh, 200px);
+  margin-bottom: 50px;
+  margin-top: 0px;
   overflow: visible;
   z-index: 1;
 }
@@ -944,6 +944,24 @@ body.bg-active {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.4;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+.scene4-read-more {
+  background: none;
+  border: none;
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 13px;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 0;
+  letter-spacing: 0.5px;
+  opacity: 0.9;
 }
 
 .scene4-new-text {
